# fmt

./: .gitmodules  .travis.yml  Makefile.am  README.md  _config.yml  configure.ac  fmt.pc.in  index.md  package.json  sonar-project.properties
_doc/: api.md  license.md
_doc/api/: functions.md  macros.md  types.md
doc/: README.md
src/: fmt.c  fmt.h
test/: double.c  file.c  flags.c  indirect.c  integer.c  intmax.c  ldouble.c  long.c  longlong.c  meta.c  month.c  percent.c  person.c  precision.c  ptrdiff.c  short.c  size.c  string.c  testing.h  wrongid.c
